[workspace]
members = [
    "cli",
    "exonum",

    "examples/cryptocurrency",
    "examples/cryptocurrency-advanced/backend",
    "examples/sample_runtime",
    "examples/timestamping/backend",

    "services/explorer",
    "services/middleware",
    "services/time",
    "services/supervisor",

    "test-suite/consensus-tests",
    "test-suite/node-tests",
    "test-suite/testkit",
    "test-suite/testkit/server",

    "runtimes/rust",

    "components/api",
    "components/build",
    "components/crypto",
    "components/derive",
    "components/explorer",
    "components/keys",
    "components/merkledb",
    "components/proto",
]
exclude = [ "exonum/fuzz" ]
