[workspace]
members = [
    "cli",
    "exonum",
    "exonum-node",

    "examples/cryptocurrency",
    "examples/cryptocurrency-advanced/backend",
    "examples/sample_runtime",
    "examples/timestamping/backend",

    "services/explorer",
    "services/middleware",
    "services/time",
    "services/supervisor",

    "test-suite/consensus-tests",
    "test-suite/testkit",
    "test-suite/testkit/server",

    "runtimes/rust",

    "components/api",
    "components/build",
    "components/crypto",
    "components/derive",
    "components/explorer",
    "components/keys",
    "components/merkledb",
    "components/proto",
    "components/system-api",
]
exclude = [ "exonum/fuzz" ]
