[package]
name = "timestamping"
version = "0.5.0"
authors = ["Exonum Team <exonum@bitfury.com>"]

[dependencies]
env_logger = "0.4"

params = "0.8"
router = "0.6"
iron = "0.6"
bodyparser = "0.8"

log = "0.4.1"
byteorder = "1.2"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

exonum = "0.5.0"
exonum-configuration = "0.5"
exonum-btc-anchoring = { version = "0.5.0", optional = true }

[dev-dependencies]
exonum-testkit = "0.5"

[features]
default = []
anchoring = ["exonum-btc-anchoring"]
