[package]
name = "advanced_cryptocurrency"
version = "0.6.0"
authors = ["Exonum Team <exonum@bitfury.com>"]

[dependencies]
exonum = "0.6"
exonum-configuration = "0.6"
serde = "1.0"
serde_derive = "1.0"
iron = "0.6"
bodyparser = "0.8"
router = "0.6"
failure = "0.1"

[dev-dependencies]
exonum-testkit = "0.6"
serde_json = "1.0"
