[package]
name = "exonum-cli"
version = "1.0.0"
edition = "2021"
authors = ["The Exonum Team <contact@exonum.com>"]
homepage = "https://exonum.com/"
repository = "https://github.com/exonum/exonum"
documentation = "https://docs.rs/exonum-cli"
readme = "README.md"
license = "Apache-2.0"
keywords = ["exonum", "cli", "library"]
categories = ["command-line-interface", "command-line-utilities", "config"]
description = "Helper crate for secure and convenient configuration of the Exonum nodes."

[dependencies]
exonum = { version = "1.0.0", path = "../exonum" }
exonum-node = { version = "1.0.0", path = "../exonum-node" }
exonum-explorer-service = { version = "1.0.0", path = "../services/explorer" }
exonum-supervisor = { version = "1.0.0", path = "../services/supervisor" }
exonum-system-api = { version = "1.0.0", path = "../components/system-api" }
exonum-rust-runtime = { version = "1.0.0", path = "../runtimes/rust" }

anyhow = "1"
log = "0.4"
rpassword = "7"
serde = { version = "1.0", features = [ "derive" ] }
structopt = "0.3"
tempfile = "3.2"
toml = "0.7"
zeroize = "1"

[dev-dependencies]
exonum-derive = { version = "1.0.0", path = "../components/derive" }

futures = "0.3"
lazy_static = "1.4"
pretty_assertions = "1"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies.tokio]
version = "1"
features = ["io-util", "macros", "rt-multi-thread", "net", "time"]
