[package]
name = "exonum-crypto"
version = "0.9.0"
authors = ["The Exonum Team <exonum@bitfury.com>"]
homepage = "https://exonum.com/"
repository = "https://github.com/exonum/exonum"
documentation = "https://docs.rs/exonum"
readme = "README.md"
license = "Apache-2.0"
keywords = ["database", "distributed", "blockchain", "framework", "exonum"]
categories = ["cryptography", "database-implementations"]
description = "An extensible framework for blockchain software projects."
autobenches = false

[dependencies]
byteorder = "1.2.3"
chrono = { version = "=0.4.5", features = ["serde"] }
hex = "=0.3.2"
rust_decimal = "=0.10.0"
serde = "1.0.10"
serde_derive = "1.0.64"
serde_json = "1.0.19"
uuid = { version = "=0.6.5", features = ["serde"] }
exonum_sodiumoxide = { version = "0.0.20", optional = true }

[features]
default = ["sodiumoxide-crypto"]
sodiumoxide-crypto = ["exonum_sodiumoxide"]
