[package]
name = "exonum-crypto"
version = "0.9.0"
authors = ["The Exonum Team <exonum@bitfury.com>"]
homepage = "https://exonum.com/"
repository = "https://github.com/exonum/exonum"
documentation = "https://docs.rs/exonum-crypto"
readme = "README.md"
license = "Apache-2.0"
keywords = ["exonum", "cryptography", "library"]
categories = ["cryptography", "hashing"]
description = "Cryptography related types, constants, traits and functions."

[dependencies]
byteorder = "1.2.3"
chrono = "=0.4.6"
hex = "=0.3.2"
rust_decimal = "=0.10.1"
serde = "1.0.10"
serde_derive = "1.0.64"
serde_json = "1.0.19"
uuid = "=0.6.5"
exonum_sodiumoxide = { version = "0.0.20", optional = true }

[features]
default = ["sodiumoxide-crypto"]
sodiumoxide-crypto = ["exonum_sodiumoxide"]
