[package]
name = "cryptocurrency"
version = "0.1.0"
authors = ["Ivan Ivashchenko <ivan.ivashchenko@xdev.re"]

[dependencies]
exonum = {version="0.1", path="../exonum"}
env_logger = "0.3"
clap = {version="2.13", features=["unstable"]}

rustless = "0.9"
iron = "0.4"
hyper = "0.9"
valico = "1.0"
time = "0.1"
rand = "0.3"
log = "0.3"
base64 = "0.2"

serde = "0.8"
serde_macros = "0.8.9"
toml = {version="0.2", default-features=false, features=["serde"]}
