[package]
name = "cryptocurrency"
version = "0.1.0"
authors = ["Ivan Ivashchenko <ivan.ivashchenko@xdev.re"]

[dependencies]
env_logger = "0.3"
clap = {version="2.14", features=["unstable"]}

rustless = "0.9"
iron = "0.4"
hyper = "0.9"
valico = "1.0"
time = "0.1"
rand = "0.3"
log = "0.3"
byteorder = "0.5"

serde = "0.8"
serde_derive = "0.8"
jsonway = "1.0"

[dependencies.exonum]
git = "ssh://git@gitlab.xdev.re/digital-assets/digital-assets.git"
rev = "a84b2e37"

[dependencies.blockchain_explorer]
git = "ssh://git@gitlab.xdev.re/digital-assets/digital-assets.git"
rev = "a84b2e37"
