[package]
name = "exonum-node"
version = "1.0.0-rc.1"
edition = "2018"
authors = ["The Exonum Team <contact@exonum.com>"]
homepage = "https://exonum.com/"
repository = "https://github.com/exonum/exonum"
documentation = "https://docs.rs/exonum-node"
readme = "README.md"
license = "Apache-2.0"
keywords = ["exonum", "blockchain", "node"]
categories = ["cryptography"]
description = "Node of the Exonum blockchain framework."

[badges]
travis-ci = { repository = "exonum/exonum" }

[dependencies]
bit-vec = "0.6.0"
byteorder = { version = "1.2.7", features = [ "i128" ] }
bytes = "0.4.11"
chrono = "0.4.6"
failure = "0.1.5"
futures = "0.1.25"
log = "0.4.6"
protobuf = { version = "2.8.1", features = ["with-serde"] }
rand = "0.7"
serde = "1.0.101"
serde_derive = "1.0.101"
snow = { version = "0.6.0", default-features = false }
tokio = "0.1.14"
tokio-codec = "0.1.1"
tokio-core = "0.1.17"
tokio-io = "0.1.11"
tokio-retry = "0.2.0"
tokio-threadpool = "0.1.10"
tokio-dns-unofficial = "0.4.0"

exonum = { version = "1.0.0-rc.1", path = "../exonum" }
exonum-api = { version = "1.0.0-rc.1", path = "../components/api" }
exonum-derive = { version = "1.0.0-rc.1", path = "../components/derive" }
exonum-merkledb = { version = "1.0.0-rc.1", path = "../components/merkledb" }
exonum-proto = { version = "1.0.0-rc.1", path = "../components/proto" }
exonum_sodiumoxide = { version = "0.0.23", optional = true }

[dev-dependencies]
bincode = "1.2.1"
criterion = "0.3.0"
hex = "=0.4.0" # 0.4.1 is not compatible with Rust 1.36
pretty_assertions = "0.6.1"
serde_json = "1.0.44"

exonum-rust-runtime = { version = "1.0.0-rc.1", path = "../runtimes/rust" }

[build-dependencies]
exonum-build = { version = "1.0.0-rc.1", path = "../components/build" }

[features]
default = ["exonum_sodiumoxide"]

[[bench]]
name = "transactions"
harness = false
path = "benches/transactions.rs"
