[package]
name = "exonum-node"
version = "1.0.0"
edition = "2018"
authors = ["The Exonum Team <contact@exonum.com>"]
homepage = "https://exonum.com/"
repository = "https://github.com/exonum/exonum"
documentation = "https://docs.rs/exonum-node"
readme = "README.md"
license = "Apache-2.0"
keywords = ["exonum", "blockchain", "node"]
categories = ["cryptography"]
description = "Node of the Exonum blockchain framework."

[badges]
travis-ci = { repository = "exonum/exonum" }

[dependencies]
anyhow = "1.0.26"
actix-rt = "1.0.0"
async-trait = "0.1.24"
bit-vec = "0.6.0"
byteorder = { version = "1.2.7", features = ["i128"] }
bytes = "0.5.0"
chrono = "0.4.6"
futures = "0.3.4"
futures-retry = "0.5.0"
log = "0.4.6"
protobuf = { version = "2.8.1", features = ["with-serde"] }
rand = "0.7"
serde = "1.0.101"
serde_derive = "1.0.101"
snow = { version = "0.6.0", default-features = false }
thiserror = "1.0"
tokio-util = { version = "0.3.0", features = ["codec"] }

exonum = { version = "1.0.0", path = "../exonum" }
exonum-api = { version = "1.0.0", path = "../components/api" }
exonum-derive = { version = "1.0.0", path = "../components/derive" }
exonum-merkledb = { version = "1.0.0", path = "../components/merkledb" }
exonum-proto = { version = "1.0.0", path = "../components/proto" }
exonum_sodiumoxide = { version = "0.0.23", optional = true }

[dependencies.tokio]
version = "0.2.13"
features = ["blocking", "dns", "io-util", "macros", "rt-threaded", "signal", "tcp", "time"]

[dev-dependencies]
bincode = "1.2.1"
criterion = "0.3.0"
hex = "0.4.0"
pretty_assertions = "0.6.1"
serde_json = "1.0.44"
toml = "0.5.6"

exonum-rust-runtime = { version = "1.0.0", path = "../runtimes/rust" }

# Dependencies for the Unix-specific `signals` test.
[target.'cfg(unix)'.dev_dependencies]
nix = "0.17.0"
reqwest = { version = "0.10.2", features = ["blocking"] }
rusty-fork = "0.2.2"

[build-dependencies]
exonum-build = { version = "1.0.0", path = "../components/build" }

[features]
default = ["exonum_sodiumoxide"]

[[bench]]
name = "transactions"
harness = false
path = "benches/transactions.rs"
