[package]
name = "exonum-node"
version = "1.0.0"
edition = "2018"
authors = ["The Exonum Team <contact@exonum.com>"]
homepage = "https://exonum.com/"
repository = "https://github.com/exonum/exonum"
documentation = "https://docs.rs/exonum-node"
readme = "README.md"
license = "Apache-2.0"
keywords = ["exonum", "blockchain", "node"]
categories = ["cryptography"]
description = "Node of the Exonum blockchain framework."

[badges]
travis-ci = { repository = "exonum/exonum" }

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bit-vec = "0.6"
byteorder = { version = "1.4", features = ["i128"] }
bytes = "1"
chrono = "0.4.6"
futures = "0.3"
futures-retry = "0.6"
log = "0.4.6"
protobuf = { version = "2.25", features = ["with-serde"] }
rand = "0.8"
serde = "1.0"
serde_derive = "1.0"
snow = { version = "0.8.0", default-features = false }
socket2 = { version = "0.4", features = [ "all" ] }
thiserror = "1.0"
tokio-stream = { version = "0.1", features = [ "signal" ] }
tokio-util = { version = "0.6", features = ["codec"] }

exonum = { version = "1.0.0", path = "../exonum" }
exonum-api = { version = "1.0.0", path = "../components/api" }
exonum-derive = { version = "1.0.0", path = "../components/derive" }
exonum-merkledb = { version = "1.0.0", path = "../components/merkledb" }
exonum-proto = { version = "1.0.0", path = "../components/proto" }
exonum_sodiumoxide = { version = "0.0.23", optional = true }

[dependencies.tokio]
version = "1"
features = ["io-util", "macros", "rt-multi-thread", "signal", "net", "time"]

[dev-dependencies]
bincode = "1.3"
criterion = { version = "0.3", features = [ "html_reports" ] }
hex = "0.4"
pretty_assertions = "1"
serde_json = "1.0"
toml = "0.5.6"

exonum-rust-runtime = { version = "1.0.0", path = "../runtimes/rust" }

# Dependencies for the Unix-specific `signals` test.
[target.'cfg(unix)'.dev_dependencies]
nix = "0.23"
reqwest = { version = "0.11", features = ["blocking"] }
rusty-fork = "0.2"

[build-dependencies]
exonum-build = { version = "1.0.1", path = "../components/build" }

[features]
default = ["exonum_sodiumoxide"]

[[bench]]
name = "transactions"
harness = false
path = "benches/transactions.rs"
