[package]
name = "exonum"
version = "0.13.0-rc.2"
edition = "2018"
authors = ["The Exonum Team <contact@exonum.com>"]
homepage = "https://exonum.com/"
repository = "https://github.com/exonum/exonum"
documentation = "https://docs.rs/exonum"
readme = "README.md"
license = "Apache-2.0"
keywords = ["database", "distributed", "blockchain", "framework", "exonum"]
categories = ["cryptography", "database-implementations"]
description = "An extensible framework for blockchain software projects."
autobenches = true
links = "exonum_protobuf"

[badges]
travis-ci = { repository = "exonum/exonum" }

[dependencies]
log = "0.4.6"
byteorder = { version = "1.2.7", features = [ "i128" ] }
hex = "0.4"
bit-vec = "0.6.0"
rand = "0.7"
serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0.19"
serde_str = "0.1.0"
env_logger = "0.6.0"
bytes = "0.4.11"
futures = "0.1.25"
tokio = "0.1.14"
tokio-codec = "0.1.1"
tokio-core = "0.1.17"
tokio-io = "0.1.11"
tokio-retry = "0.2.0"
tokio-threadpool = "0.1.10"
tokio-dns-unofficial = "0.4.0"
failure = "0.1.5"
os_info = "1.0.1"
chrono = { version = "0.4.6", features = ["serde"] }
snow = { version = "0.6.0", default-features = false }
protobuf = { version = "2.8.1", features = ["with-serde"] }
semver = { version = "0.9.0", features = ["serde"] }

exonum_sodiumoxide = { version = "0.0.23", optional = true }
exonum-api = { version = "0.13.0-rc.2", path = "../components/api" }
exonum-crypto = { version = "0.13.0-rc.2", path = "../components/crypto" }
exonum-derive = { version = "0.13.0-rc.2", path = "../components/derive" }
exonum-keys = { version = "0.13.0-rc.2", path = "../components/keys" }
exonum-merkledb = { version = "0.13.0-rc.2", path = "../components/merkledb" }
exonum-proto = { version = "0.13.0-rc.2", path = "../components/proto" }

[dev-dependencies]
assert_matches = "1.3.0"
bincode = "1.2.0"
criterion = "0.3.0"
pretty_assertions = "0.6.1"

[[bench]]
name = "criterion"
harness = false
path = "benches/criterion/lib.rs"

[features]
default = ["sodiumoxide-crypto", "with-serde", "rocksdb_snappy", "with-protobuf"]
float_serialize = []
long_benchmarks = []
sodiumoxide-crypto = ["exonum_sodiumoxide"]
with-serde = []
with-protobuf = ["with-serde"]
rocksdb_snappy = ["exonum-merkledb/rocksdb_snappy"]
rocksdb_lz4 = ["exonum-merkledb/rocksdb_lz4"]
rocksdb_zlib = ["exonum-merkledb/rocksdb_zlib"]
rocksdb_zstd = ["exonum-merkledb/rocksdb_zstd"]
rocksdb_bzip2 = ["exonum-merkledb/rocksdb_bzip2"]

[build-dependencies]
exonum-build = { version = "0.13.0-rc.2", path = "../components/build" }

[package.metadata.docs.rs]
dependencies = [ "protobuf-compiler" ]
