[package]
name = "exonum"
version = "1.0.0"
edition = "2018"
authors = ["The Exonum Team <contact@exonum.com>"]
homepage = "https://exonum.com/"
repository = "https://github.com/exonum/exonum"
documentation = "https://docs.rs/exonum"
readme = "README.md"
license = "Apache-2.0"
keywords = ["database", "distributed", "blockchain", "framework", "exonum"]
categories = ["cryptography", "database-implementations"]
description = "An extensible framework for blockchain software projects."
autobenches = true
links = "exonum_protobuf"

[badges]
travis-ci = { repository = "exonum/exonum" }

[dependencies]
anyhow = "1.0.26"
log = "0.4.6"
hex = "0.4.0"
serde = "1.0.101"
serde_derive = "1.0.101"
serde_str = "0.1.0"
env_logger = "0.7.1"
futures = "0.3.4"
os_info = "2.0"
chrono = { version = "0.4.6", features = ["serde"] }
protobuf = { version = "2.8.1", features = ["with-serde"] }
semver = { version = "0.9.0", features = ["serde"] }
thiserror = "1.0"

exonum-crypto = { version = "1.0.0", path = "../components/crypto" }
exonum-derive = { version = "1.0.0", path = "../components/derive" }
exonum-keys = { version = "1.0.0", path = "../components/keys" }
exonum-merkledb = { version = "1.0.0", path = "../components/merkledb" }
exonum-proto = { version = "1.0.0", path = "../components/proto" }

[dev-dependencies]
assert_matches = "1.3.0"
bincode = "1.2.0"
bit-vec = "0.6.0"
criterion = "0.3.0"
pretty_assertions = "0.6.1"
serde_json = "1.0.19"

[[bench]]
name = "criterion"
harness = false
path = "benches/criterion/lib.rs"

[features]
default = ["with-serde", "rocksdb_snappy", "with-protobuf"]
float_serialize = []
long_benchmarks = []
with-serde = []
with-protobuf = ["with-serde"]
rocksdb_snappy = ["exonum-merkledb/rocksdb_snappy"]
rocksdb_lz4 = ["exonum-merkledb/rocksdb_lz4"]
rocksdb_zlib = ["exonum-merkledb/rocksdb_zlib"]
rocksdb_zstd = ["exonum-merkledb/rocksdb_zstd"]
rocksdb_bzip2 = ["exonum-merkledb/rocksdb_bzip2"]

[build-dependencies]
exonum-build = { version = "1.0.0", path = "../components/build" }

[package.metadata.docs.rs]
dependencies = [ "protobuf-compiler" ]
