[package]
name = "exonum_build"
version = "0.9.0"
authors = ["The Exonum Team <exonum@bitfury.com>"]
license = "Apache-2.0"
keywords = ["protobuf", "exonum"]
categories = ["development-tools"]
description = "Helper functions for writing build.rs for exonum services."

[dependencies]
protoc-rust = "2.2.0"
walkdir = "2.2.7"
