[package]
name = "exonum_derive"
version = "0.5.1"
authors = ["The Exonum Team <exonum@bitfury.com>"]
homepage = "https://exonum.com/"
repository = "https://github.com/exonum/exonum"
documentation = "https://docs.rs/exonum_derive"
readme = "README.md"
license = "Apache-2.0"
description = "Proc macros for Exonum."

[badges]
travis-ci = { repository = "exonum/exonum" }

[dependencies]
quote = "0.4.2"
syn = { version = "0.12.13", features = [ "default", "visit-mut" ] }
synstructure = "0.7.0"
failure = "0.1.1"
failure_derive = "0.1.1"
proc-macro2 = "0.2.3"

[dev-dependencies]
exonum = { version = "0.5.1", path = "../exonum" }
serde_json = "1.0"

[lib]
name = "exonum_derive"
proc-macro = true
