[package]
name = "sandbox"
version = "0.1.0"
authors = ["Ivan Ivashchenko <ivan.ivashchenko@xdev.re>"]

[dependencies]
exonum = {version="0.1", path="../exonum", features=["memorydb", "sandbox_events"]}
blockchain_explorer = {version="0.1", path="../blockchain_explorer", features=["memorydb"]}

log = "0.3"
clap = {version="2.14", features=["unstable"]}
rand = "0.3"
time = "0.1"
serde = "0.8"