[package]
name = "sandbox"
version = "0.1.0"
authors = ["The Exonum Team <exonum@bitfury.com>"]

[dependencies]
exonum = {version="0.1", path="../exonum"}

log = "0.3.8"
env_logger = "0.4.3"
clap = {version="2.25.0", features=["unstable"]}
rand = "0.3.15"
bit-vec = "0.4.4"
futures = "0.1.14"
tokio-core = "0.1.9"
tokio-io = "0.1.2"