[package]
name = "sandbox"
version = "0.0.0"
publish = false
authors = ["The Exonum Team <exonum@bitfury.com>"]

[dependencies]
exonum = { version = "0.5", path = "../exonum" }

log = "0.4.1"
env_logger = "0.5.3"
clap = { version = "2.25.0", features = ["unstable"] }
rand = "0.4.2"
bit-vec = "0.4.4"
futures = "0.1.14"
