[package]
name = "exonum-configuration-sandbox"
version = "0.2.0"
authors = ["The Exonum Team <exonum@bitfury.com>"]

[dependencies]
iron = "0.5.1"
serde = "1.0.0"
serde_derive = "1.0.0"
rand = "0.3.0"
router = "0.5.1"
log = "0.3.0"
iron-test = { git = "https://github.com/reem/iron-test" }
exonum-configuration = {version="0.2.0", path="../"}

[dependencies.exonum]
git = "https://github.com/exonum/exonum.git"
version = "0.2.0"
# tag = "v0.3"
rev = "32842d72845bc8b436c78db4347bc127a9dfa16c"

[dependencies.sandbox]
git = "https://github.com/exonum/exonum.git"
version = "0.2.0"
# tag = "v0.3"
rev = "32842d72845bc8b436c78db4347bc127a9dfa16c"

[replace]
"exonum:0.2.0" = { git = "https://github.com/exonum/exonum.git", rev = "32842d72845bc8b436c78db4347bc127a9dfa16c" }
