[package]
name = "exonum-configuration-sandbox"
version = "0.3.0"
authors = ["The Exonum Team <exonum@bitfury.com>"]

[dependencies]
iron = "0.5.1"
serde = "1.0.10"
serde_derive = "1.0.10"
rand = "0.3.15"
router = "0.5.1"
log = "0.3.8"
iron-test = "0.5.0"
exonum = "0.3.0"
exonum-configuration = {version="0.3.0", path="../"}

[dependencies.sandbox]
git = "https://github.com/exonum/exonum.git"
rev = "f81c4b1429a225ca7605ba5ae11122f4fcd78859"

[patch.crates-io]
exonum = { git = "https://github.com/exonum/exonum", rev = "f81c4b1429a225ca7605ba5ae11122f4fcd78859" }