[package]
name = "exonum-testkit"
version = "0.10.0"
authors = ["The Exonum Team <exonum@bitfury.com>"]
homepage = "https://exonum.com/"
repository = "https://github.com/exonum/exonum"
documentation = "https://docs.rs/exonum-testkit"
readme = "README.md"
license = "Apache-2.0"
keywords = ["test", "blockchain", "framework", "exonum"]
categories = ["development-tools::testing"]
description = """
Testkit for Exonum blockchain framework, allowing to test service APIs
synchronously.
"""

[badges]
travis-ci = { repository = "exonum/exonum" }
circle-ci = { repository = "exonum/exonum" }

[dependencies]
actix-web = "=0.7.17"
exonum = { version = "0.10.1", path = "../exonum" }
failure = "0.1.5"
futures = "=0.1.25"
reqwest = "=0.9.5"
log = "=0.4.6"
serde = "1.0.10"
serde_derive = "1.0.10"
serde_json = "1.0.2"
serde_urlencoded = "=0.5.4"
tokio-core = "=0.1.17"
protobuf = { version = "2.2.0", features = ["with-serde"] }

[dev-dependencies]
hex = "=0.3.2"
rand = "=0.6.3"
pretty_assertions = "=0.5.1"
assert_matches = "1.2.0"
thread_local = "=0.3.6"
lazy_static = "1.0.0"
exonum-derive = { version = "0.10.0", path = "../components/derive" }

[build-dependencies]
exonum-build = { version = "0.10.0", path = "../components/build" }
