[package]
name = "exonum-testkit"
version = "0.12.0"
edition = "2018"
authors = ["The Exonum Team <exonum@bitfury.com>"]
homepage = "https://exonum.com/"
repository = "https://github.com/exonum/exonum"
documentation = "https://docs.rs/exonum-testkit"
readme = "README.md"
license = "Apache-2.0"
keywords = ["test", "blockchain", "framework", "exonum"]
categories = ["development-tools::testing"]
description = """
Testkit for Exonum blockchain framework, allowing to test service APIs
synchronously.
"""

[badges]
travis-ci = { repository = "exonum/exonum" }

[dependencies]
actix-web = { version = "0.7.18", default-features = false }
exonum = { version = "0.12.0", path = "../exonum" }
failure = "0.1.5"
futures = "0.1.25"
reqwest = "0.9.8"
log = "0.4.6"
serde = "1.0.10"
serde_derive = "1.0.64"
serde_json = "1.0.2"
serde_urlencoded = "0.6.0"
tokio-core = "0.1.17"
protobuf = { version = "2.8.1", features = ["with-serde"] }
exonum-merkledb = { version = "0.12.0", path = "../components/merkledb" }
exonum-derive = { version = "0.12.0", path = "../components/derive" }
exonum-proto = { version = "0.12.0", path = "../components/proto" }

[dev-dependencies]
hex = "0.4"
rand = "0.7"
pretty_assertions = "0.6.1"
assert_matches = "1.2.0"
thread_local = "1.0.0"
lazy_static = "1.0.0"

[build-dependencies]
exonum-build = { version = "0.12.0", path = "../components/build" }
