[package]
name = "cryptocurrency_api_tests"
version = "0.3.0"
authors = ["Exonum Team <exonum@bitfury.com>"]

[dependencies]
serde = "1.0.0"
serde_derive = "1.0.0"
rand = "0.3"
log = "0.3"
router = "0.5.1"
iron = "0.5.1"
iron-test = "0.5.0"
cryptocurrency = { version="0.3.0", path="../" }

[dependencies.exonum]
git = "https://github.com/exonum/exonum.git"
tag = "v0.3"

[dependencies.sandbox]
git = "https://github.com/exonum/exonum.git"
tag = "v0.3"

[replace]
"exonum:0.3.0" = { git = "https://github.com/exonum/exonum.git", tag="v0.3" }
