[package]
name = "cryptocurrency_api_tests"
version = "0.4.0"
authors = ["Exonum Team <exonum@bitfury.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
rand = "0.4"
log = "0.4"
router = "0.6"
iron = "0.6"
iron-test = "0.6"
cryptocurrency = { version="0.4.0", path="../" }

[dependencies.exonum]
git = "https://github.com/exonum/exonum.git"
tag = "v0.4"

[dependencies.sandbox]
git = "https://github.com/exonum/exonum.git"
tag = "v0.4"

[dev-dependencies]
exonum-testkit = "0.1"
