[package]
name = "cryptocurrency_api_tests"
version = "0.5.0"
authors = ["Exonum Team <exonum@bitfury.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
rand = "0.4.2"
log = "0.4.1"
router = "0.6"
iron = "0.6"
iron-test = "0.6"
cryptocurrency = { version="0.5.0", path="../" }

[dependencies.exonum]
git = "https://github.com/exonum/exonum.git"
tag = "v0.5"

[dependencies.sandbox]
git = "https://github.com/exonum/exonum.git"
tag = "v0.5"

[dev-dependencies]
exonum-testkit = "0.5"
