[package]
name = "timestamping_sandbox"
version = "0.1.0"
authors = ["Aleksey Sidorov <aleksei.sidorov@bitfury.com"]

[dependencies]
log = "0.3.0"
serde = "1.0.0"
serde_json = "1.0.0"
serde_derive = "1.0.0"
router = "0.5.1"
iron = "0.5.1"
iron-test = "0.5.0"
bodyparser = "0.7.0"
mime = "0.2.0"

[dependencies.timestamping]
path = "../"

[dependencies.exonum]
git = "https://github.com/exonum/exonum.git"
version = "0.1.0"
tag = "v0.1"

[dependencies.sandbox]
git = "https://github.com/exonum/exonum.git"
version = "0.1.0"
tag = "v0.1"

[replace]
"exonum:0.1.0" = { git = "https://github.com/exonum/exonum.git", tag="v0.1" }
